add project description and github links

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: transparent;
+  color: white;
+  text-align: center;
+}
+
+
+.footer h2, .footer div {
+  font-size: 15px;
+}
